// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Disabled variants should render disabled button component contained 1`] = `
<View
  accessible={true}
  color="highlight"
  disabled={true}
  focusable={true}
  hideOverflow={true}
  onClick={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size={0}
>
  <View
    accessibilityRole="button"
    disabled={true}
    onLayout={[Function]}
    size="medium"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#FEEEEF",
          "borderRadius": 42,
          "justifyContent": "center",
          "minHeight": 48,
        },
      ]
    }
    testID="button"
    type="contained"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontWeight": "500",
              "lineHeight": 21,
            },
          ]
        }
        testID="button-label"
        textColor="highEmphasis"
      >
        LABEL BUTTON
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Disabled variants should render disabled button component outlined 1`] = `
<View
  accessible={true}
  color="highlight"
  disabled={true}
  focusable={true}
  hideOverflow={true}
  onClick={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size={0}
>
  <View
    accessibilityRole="button"
    disabled={true}
    onLayout={[Function]}
    size="medium"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderColor": "#FAFAEA",
          "borderRadius": 42,
          "borderWidth": 1,
          "justifyContent": "center",
          "minHeight": 48,
        },
      ]
    }
    testID="button"
    type="outlined"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontWeight": "500",
              "lineHeight": 21,
            },
          ]
        }
        testID="button-label"
        textColor="mediumEmphasis"
      >
        LABEL BUTTON
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Disabled variants should render disabled button component text 1`] = `
<View
  accessible={true}
  color="highlight"
  disabled={true}
  focusable={true}
  hideOverflow={true}
  onClick={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size={0}
>
  <View
    accessibilityRole="button"
    disabled={true}
    onLayout={[Function]}
    size="medium"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 42,
          "justifyContent": "center",
          "minHeight": 48,
        },
      ]
    }
    testID="button"
    type="text"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontWeight": "500",
              "lineHeight": 21,
            },
          ]
        }
        testID="button-label"
        textColor="mediumEmphasis"
      >
        LABEL BUTTON
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Variants should render button component contained 1`] = `
<View
  accessible={true}
  color="highlight"
  disabled={false}
  focusable={true}
  hideOverflow={true}
  onClick={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size={0}
>
  <View
    accessibilityRole="button"
    disabled={false}
    onLayout={[Function]}
    size="medium"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 42,
          "justifyContent": "center",
          "minHeight": 48,
          "shadowColor": "#AEAEAE",
        },
      ]
    }
    testID="button"
    type="contained"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontWeight": "500",
              "lineHeight": 21,
            },
          ]
        }
        testID="button-label"
        textColor="onPrimary"
      >
        LABEL BUTTON
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Variants should render button component outlined 1`] = `
<View
  accessible={true}
  color="highlight"
  disabled={false}
  focusable={true}
  hideOverflow={true}
  onClick={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size={0}
>
  <View
    accessibilityRole="button"
    disabled={false}
    onLayout={[Function]}
    size="medium"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderColor": "#FFFFFF",
          "borderRadius": 42,
          "borderWidth": 1,
          "justifyContent": "center",
          "minHeight": 48,
        },
      ]
    }
    testID="button"
    type="outlined"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontWeight": "500",
              "lineHeight": 21,
            },
          ]
        }
        testID="button-label"
        textColor="highEmphasis"
      >
        LABEL BUTTON
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component Variants should render button component text 1`] = `
<View
  accessible={true}
  color="highlight"
  disabled={false}
  focusable={true}
  hideOverflow={true}
  onClick={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size={0}
>
  <View
    accessibilityRole="button"
    disabled={false}
    onLayout={[Function]}
    size="medium"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "borderRadius": 42,
          "justifyContent": "center",
          "minHeight": 48,
        },
      ]
    }
    testID="button"
    type="text"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontWeight": "500",
              "lineHeight": 21,
            },
          ]
        }
        testID="button-label"
        textColor="highEmphasis"
      >
        LABEL BUTTON
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component with Icon should render the icon to the left 1`] = `
<View
  accessible={true}
  color="highlight"
  disabled={false}
  focusable={true}
  hideOverflow={true}
  onClick={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size={0}
>
  <View
    accessibilityRole="button"
    disabled={false}
    onLayout={[Function]}
    size="medium"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 42,
          "justifyContent": "center",
          "minHeight": 48,
          "shadowColor": "#AEAEAE",
        },
      ]
    }
    testID="button"
    type="contained"
  >
    <View
      iconPosition="left"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row-reverse",
          },
        ]
      }
    >
      <Text
        iconName="outlined-default-mockup"
        iconPosition="left"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontWeight": "500",
              "lineHeight": 21,
              "marginStart": 8,
            },
          ]
        }
        testID="button-label"
        textColor="onPrimary"
      >
        LABEL BUTTON
      </Text>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#BBBBBB",
            "fontFamily": "natds-icons",
            "fontSize": 16,
          }
        }
        testID="icon-outlined-default-mockup"
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button component with Icon should render the icon to the right by default 1`] = `
<View
  accessible={true}
  color="highlight"
  disabled={false}
  focusable={true}
  hideOverflow={true}
  onClick={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  size={0}
>
  <View
    accessibilityRole="button"
    disabled={false}
    onLayout={[Function]}
    size="medium"
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 42,
          "justifyContent": "center",
          "minHeight": 48,
          "shadowColor": "#AEAEAE",
        },
      ]
    }
    testID="button"
    type="contained"
  >
    <View
      iconPosition="right"
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        iconName="outlined-default-mockup"
        iconPosition="right"
        style={
          Array [
            Object {
              "color": "#BBBBBB",
              "fontWeight": "500",
              "lineHeight": 21,
              "marginEnd": 8,
            },
          ]
        }
        testID="button-label"
        textColor="onPrimary"
      >
        LABEL BUTTON
      </Text>
      <Text
        accessibilityRole="text"
        style={
          Object {
            "color": "#BBBBBB",
            "fontFamily": "natds-icons",
            "fontSize": 16,
          }
        }
        testID="icon-outlined-default-mockup"
      >
        
      </Text>
    </View>
  </View>
</View>
`;
